src/frontend/kubernetes-manifests/guestbook-frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-guestbook-frontend
  labels:
    app: nodejs-guestbook
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-guestbook
      tier: frontend
  template:
    metadata:
      labels:
        app: nodejs-guestbook
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: nodejs-guestbook-frontend
        ports:
        - name: http-server
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: http-server
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: http-server
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
