src/frontend/kubernetes-manifests/guestbook-frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-guestbook-frontend
  labels:
    app: nodejs-guestbook
    tier: frontend
spec:
#  type: LoadBalancer
  type: ClusterIP  # Changed from LoadBalancer to use Ingress
  selector:
    app: nodejs-guestbook
    tier: frontend
  ports:
  - port: 80
    targetPort: http-server
    name: http
